content/consul/v2.0.x/content/docs/enterprise/index.mdx
---
layout: docs
page_title: Consul Enterprise
description: >-
  Consul Enterprise is a paid offering that extends Consul Community Edition to support large and complex deployments. Learn about scaling infrastructure, simplifying operations, and making networks more resilient with Enterprise. Evaluate Enterprise features with the feature availability and compatibility matrix.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-31T13:43:36-07:00
last_modified: 2026-04-17T17:21:07.000Z
# END AUTO GENERATED METADATA
---

# Consul Enterprise

Consul Enterprise features address the organizational complexities of collaboration, operations, scale, and governance. IBM offers several packages of Consul Enterprise licenses that include additional service networking features.

To access Consul Enterprise in a self-managed installation, [apply a purchased license](/consul/docs/enterprise/license) to the Consul Enterprise binary.

## Enterprise features

The following features are [available in several forms of Consul Enterprise](#consul-enterprise-feature-availability).

### Multi-Tenancy

- [Admin Partitions](/consul/docs/multi-tenant/admin-partition): Define administrative boundaries between tenants within a single Consul datacenter.
- [Namespaces](/consul/docs/multi-tenant/namespace): Define resource boundaries within a single admin partition for further organizational flexibility.
- [Sameness Groups](/consul/docs/reference/config-entry/sameness-group): Define partitions and cluster peers as members of a group with identical services.

### Resiliency

- [Automated Backups](/consul/docs/manage/scale/automated-backup): Configure the automatic backup of Consul state.
- [Redundancy Zones](/consul/docs/manage/scale/redundancy-zone): Deploy backup voting Consul servers to efficiently improve Consul fault tolerance
- [Server request rate limits per source IP](/consul/docs/manage/rate-limit/source): Limit gRPC and RPC traffic to servers for source IP addresses.
- [Traffic rate limiting for services](/consul/docs/manage-traffic/rate-limit): Limit the rate of HTTP requests a service receives per service instance.
- [Locality-aware routing](/consul/docs/manage-traffic/route-local): Prioritize upstream services in the same region and zone as the downstream service.
- [Fault injection](/consul/docs/troubleshoot/fault-injection): Explore the resiliency of downstream services in response to problems with an upstream service, such as errors, latency, or response rate limits.

### Scalability

- [Read Replicas](/consul/docs/manage/scale/read-replica): Deploy non-voting Consul servers to enhance the scalability of read requests.

### Operational simplification

- [Long Term Support (LTS)](/consul/docs/upgrade/lts): Reduce operational overhead and risk by using LTS releases that are maintained for longer than standard releases.
- [Automated Upgrades](/consul/docs/upgrade/automated): Ease upgrades by automating the transition from existing to newly deployed Consul servers.
- [Consul-Terraform-Sync Enterprise](/consul/docs/enterprise/cts): Leverage the enhanced network infrastructure automation capabilities of the enterprise version of Consul-Terraform-Sync.

### Complex network topology support

- [Network Areas](/consul/docs/east-west/network-area): Support complex network topologies between federated Consul datacenters with pairwise federation rather than full mesh federation.
- [Network Segments](/consul/docs/multi-tenant/network-segment): Support complex network topologies within a Consul datacenter by enforcing boundaries in Consul client gossip traffic.

### Governance

- [OIDC Auth Method](/consul/docs/secure/acl/auth-method/oidc): Manage user access to Consul through an OIDC identity provider instead of Consul ACL tokens directly.
- [Audit Logging](/consul/docs/monitor/log/audit): Understand Consul access and usage patterns by reviewing access to the Consul HTTP API.
- JWT authentication and authorization for API gateway: Prevent unverified traffic at the API gateway using JWTs for authentication and authorization on [VMs](/consul/docs/north-south/api-gateway/secure-traffic/jwt/vm) and on [Kubernetes](/consul/docs/north-south/api-gateway/secure-traffic/jwt/k8s).

### Regulatory compliance

- [FIPS 140-2 Compliance](/consul/docs/deploy/server/fips): Leverage FIPS builds of Consul Enterprise to ensure your Consul deployments are secured with BoringCrypto and CNGCrypto, and compliant with FIPS 140-2.

  <Note>

  FIPS 140-2 builds of Consul Enterprise support all runtimes (VMs, Kubernetes) except for Lambda and ECS. In addition, HCP does not currently support FIPS builds of Consul Enterprise.

  </Note>

## IBM Consul licenses

- **Consul Self-Managed Standard** licenses include support for service discovery features in multiple runtimes
- **Consul Self-Managed Premium** licenses include support for service mesh features in multiple runtimes

The following table summarizes the major differences between Consul CE and the Consul Enterprise licenses:

| Supported features                  | Consul CE                              | Standard Enterprise | Premium Enterprise |
| :---------------------------------- | :------------------------------------: | :-----------------: | :----------------- |
| Service discovery support           | &#9989;                                | &#9989;             | &#9989;            |
| Service mesh support                | &#9989; <br /> (single cluster only)   | &#10060;            | &#9989;            |
| KV store support                    | &#9989;                                | &#9989;             | &#9989;            |
| API gateway support                 | &#9989;                                | &#10060;            | &#9989;            |
| Ingress/terminating gateway support | &#9989;                                | &#10060;            | &#9989;            |
| Single datacenter support           | &#9989;                                | &#9989;             | &#9989;            |
| Multiple runtime support            | &#10060;                               | &#9989;             | &#9989;            |
| Multi-tenancy support               | &#10060;                               | &#9989;             | &#9989;            |
| Additional resiliency & scalability | &#10060;                               | &#9989;             | &#9989;            |
| FIPS 140-2 Compliance               | &#10060;                               | &#9989;             | &#9989;            |
| Consul-Terraform-Sync (CTS) support | &#9989;                                | &#9989;             | &#9989;            |

Some Consul features are not supported with a Standard Enterprise license because the feature is used only when the service mesh is deployed.

## Consul Enterprise feature availability

The Consul Enterprise features that are available depend on your license and the runtimes you use in your deployment.

### Feature availability by license

Available Enterprise features per Consul form and license include:

| Feature                                                                                                       | [HashiCorp Cloud Platform (HCP) Consul] | [Consul Enterprise] | Legacy Consul Enterprise (module-based)           |
| ------------------------------------------------------------------------------------------------------------- | --------------------------------------- | ------------------- | ------------------------------------------------- |
| Consul servers as a managed service                                                                           | Yes                                     | No (self-managed)   | No (self-managed)                                 |
| [Admin Partitions](/consul/docs/multi-tenant/admin-partition)                                                  | All tiers                               | Yes                 | With Governance and Policy module                 |
| [Audit Logging](/consul/docs/monitor/log/audit)                                                        | Standard tier and above                 | Yes                 | With Governance and Policy module                 |
| [Automated Server Backups](/consul/docs/manage/scale/automated-backup)                                                   | All tiers                               | Yes                 | Yes                                               |
| [Automated Server Upgrades](/consul/docs/upgrade/automated)                                                 | All tiers                               | Yes                 | Yes                                               |
| [Consul-Terraform-Sync Enterprise](/consul/docs/enterprise/cts)                                               | All tiers                               | Yes                 | Yes                                               |
| [Enhanced Read Scalability](/consul/docs/manage/scale/read-replica)                                               | No                                      | Yes                 | With Global Visibility, Routing, and Scale module |
| [Fault injection](/consul/docs/troubleshoot/fault-injection)                                        | Yes                                     | Yes                 | No                                                |
| [FIPS 140-2 Compliance](/consul/docs/deploy/server/fips)                                                         | No                                      | Yes                 | No                                                |
| [JWT verification for API gateways](/consul/docs/north-south/api-gateway/secure-traffic/jwt/vm) | Yes                                     | Yes                 | Yes                                               |
| [Locality-aware routing](/consul/docs/manage-traffic/route-local)                        | Yes                                     | Yes                 | Yes                                               |
| [Long Term Support (LTS)](/consul/docs/upgrade/lts)                                          | Not applicable                          | Yes                 | Not applicable                                    |
| [Namespaces](/consul/docs/multi-tenant/namespace)                                                              | All tiers                               | Yes                 | With Governance and Policy module                 |
| [Network Areas](/consul/docs/east-west/network-area)                                                           | No                                      | Yes                 | With Global Visibility, Routing, and Scale module |
| [Network Segments](/consul/docs/multi-tenant/network-segment)                        | No                                      | Yes                 | With Global Visibility, Routing, and Scale module |
| [OIDC Auth Method](/consul/docs/secure/acl/auth-method/oidc)                                               | No                                      | Yes                 | Yes                                               |
| [Redundancy Zones](/consul/docs/manage/scale/redundancy-zone)                                                        | Not applicable                          | Yes                 | With Global Visibility, Routing, and Scale module |
| [Sameness Groups](/consul/docs/reference/config-entry/sameness-group)                                         | No                                      | Yes                 | Not applicable                                    |
| [Server request rate limits per source IP](/consul/docs/manage/rate-limit/source)      | All tiers                               | Yes                 | With Governance and Policy module                 |
| [Traffic rate limiting for services](/consul/docs/manage-traffic/rate-limit)                 | Yes                                     | Yes                 | Yes                                               |

[HashiCorp Cloud Platform (HCP) Consul]: https://cloud.hashicorp.com/products/consul
[Consul Enterprise]: https://www.hashicorp.com/products/consul/

### Feature availability by runtime

Consul Enterprise feature availability can change depending on your server and client agent runtimes.

<Tabs>

<Tab heading="Server Runtime: VMs">

| Enterprise Feature                                                                                            | VM Client | K8s Client | ECS Client |
|-------------------------------------------------------------------------------------------------------------- | :-------: | :--------: | :--------: |
| [Admin Partitions](/consul/docs/multi-tenant/admin-partition)                                                  |  &#9989;  |  &#9989;   |  &#9989;   |
| [Audit Logging](/consul/docs/monitor/log/audit)                                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Automated Server Backups](/consul/docs/manage/scale/automated-backup)                                                   |  &#9989;  |  &#9989;   |  &#9989;   |
| [Automated Server Upgrades](/consul/docs/upgrade/automated)                                                 |  &#9989;  |  &#9989;   |  &#9989;   |
| [Enhanced Read Scalability](/consul/docs/manage/scale/read-replica)                                               |  &#9989;  |  &#9989;   |  &#9989;   |
| [Fault injection](/consul/docs/troubleshoot/fault-injection)                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [FIPS 140-2 Compliance](/consul/docs/deploy/server/fips)                                                         |  &#9989;  |  &#9989;   |  &#9989;   |
| [JWT verification for API gateways](/consul/docs/north-south/api-gateway/secure-traffic/jwt/vm) |  &#9989;  |  &#9989;   |  &#10060;  |
| [Locality-aware routing](/consul/docs/manage-traffic/route-local)                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Long Term Support (LTS)](/consul/docs/upgrade/lts)                                          |  &#9989;  |  &#9989;   |  &#10060;  |
| [Namespaces](/consul/docs/multi-tenant/namespace)                                                              |  &#9989;  |  &#9989;   |  &#9989;   |
| [Network Areas](/consul/docs/east-west/network-area)                                                           |  &#9989;  |  &#9989;   |  &#9989;   |
| [Network Segments](/consul/docs/multi-tenant/network-segment)                        |  &#9989;  |  &#9989;   |  &#10060;  |
| [OIDC Auth Method](/consul/docs/secure/acl/auth-method/oidc)                                               |  &#9989;  |  &#9989;   |  &#9989;   |
| [Redundancy Zones](/consul/docs/manage/scale/redundancy-zone)                                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Sameness Groups](/consul/docs/reference/config-entry/sameness-group)                                         |  &#9989;  |  &#9989;   |  &#9989;   |
| [Server request rate limits per source IP](/consul/docs/manage/rate-limit/source)      |  &#9989;  |  &#9989;   |  &#9989;   |
| [Traffic rate limiting for services](/consul/docs/manage-traffic/rate-limit)                 |  &#9989;  |  &#9989;   |  &#9989;   |

</Tab>

<Tab heading="Server Runtime: Kubernetes">

| Enterprise Feature                                                                                            | VM Client | K8s Client | ECS Client |
|-------------------------------------------------------------------------------------------------------------- | :-------: | :--------: | :--------: |
| [Admin Partitions](/consul/docs/multi-tenant/admin-partition)                                                  |  &#9989;  |  &#9989;   |  &#9989;   |
| [Audit Logging](/consul/docs/monitor/log/audit)                                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Automated Server Backups](/consul/docs/manage/scale/automated-backup)                                                   |  &#9989;  |  &#9989;   |  &#9989;   |
| [Automated Server Upgrades](/consul/docs/upgrade/automated)                                                 |  &#10060; |  &#10060;  |  &#10060;  |
| [Enhanced Read Scalability](/consul/docs/manage/scale/read-replica)                                               |  &#10060; |  &#10060;  |  &#10060;  |
| [Fault injection](/consul/docs/troubleshoot/fault-injection)                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [FIPS 140-2 Compliance](/consul/docs/deploy/server/fips)                                                         |  &#9989;  |  &#9989;   |  &#9989;   |
| [JWT verification for API gateways](/consul/docs/north-south/api-gateway/secure-traffic/jwt/k8s) |  &#9989;  |  &#9989;   |  &#10060;  |
| [Locality-aware routing](/consul/docs/manage-traffic/route-local)                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Long Term Support (LTS)](/consul/docs/upgrade/lts)                                          |  &#9989;  |  &#9989;   |  &#10060;  |
| [Namespaces](/consul/docs/multi-tenant/namespace)                                                              |  &#9989;  |  &#9989;   |  &#9989;   |
| [Network Areas](/consul/docs/east-west/network-area)                                                           |  &#9989;  |  &#9989;   |  &#9989;   |
| [Network Segments](/consul/docs/multi-tenant/network-segment)                        |  &#9989;  |  &#9989;   |  &#10060;  |
| [OIDC Auth Method](/consul/docs/secure/acl/auth-method/oidc)                                               |  &#9989;  |  &#9989;   |  &#9989;   |
| [Redundancy Zones](/consul/docs/manage/scale/redundancy-zone)                                                        |  &#10060; |  &#10060;  |  &#10060;  |
| [Sameness Groups](/consul/docs/reference/config-entry/sameness-group)                                         |  &#9989;  |  &#9989;   |  &#9989;   |
| [Server request rate limits per source IP](/consul/docs/manage/rate-limit/source)      |  &#9989;  |  &#9989;   |  &#9989;   |
| [Traffic rate limiting for services](/consul/docs/manage-traffic/rate-limit)                 |  &#9989;  |  &#9989;   |  &#9989;   |
</Tab>

<Tab heading ="Server Runtime: HCP">

| Enterprise Feature                                                                                            | VM Client | K8s Client | ECS Client |
| ------------------------------------------------------------------------------------------------------------- | :-------: | :--------: | :--------: |
| [Admin Partitions](/consul/docs/multi-tenant/admin-partition)                                                  |  &#9989;  |  &#9989;   |  &#9989;   |
| [Audit Logging](/consul/docs/monitor/log/audit)                                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Automated Server Backups](/consul/docs/manage/scale/automated-backup)                                                   |  &#9989;  |  &#9989;   |  &#9989;   |
| [Automated Server Upgrades](/consul/docs/upgrade/automated)                                                 |  &#9989;  |  &#9989;   |  &#9989;   |
| [Enhanced Read Scalability](/consul/docs/manage/scale/read-replica)                                               |  &#10060; |  &#10060;  |  &#10060;  |
| [Fault injection](/consul/docs/troubleshoot/fault-injection)                                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [FIPS 140-2 Compliance](/consul/docs/deploy/server/fips)                                                         |  &#10060; |  &#10060;  |  &#10060;  |
| [JWT verification for API gateways](/consul/docs/north-south/api-gateway/secure-traffic/jwt/vm) |  &#9989;  |  &#9989;   |  &#10060;  |
| [Locality-aware routing](/consul/docs/manage-traffic/route-local)                        |  &#9989;  |  &#9989;   |  &#9989;   |
| [Long Term Support (LTS)](/consul/docs/upgrade/lts)                                          |  N/A      |  N/A       |  N/A       |
| [Namespaces](/consul/docs/multi-tenant/namespace)                                                              |  &#9989;  |  &#9989;   |  &#9989;   |
| [Network Areas](/consul/docs/east-west/network-area)                                                           |  &#10060; |  &#10060;  |  &#10060;  |
| [Network Segments](/consul/docs/multi-tenant/network-segment)                        |  &#10060; |  &#10060;  |  &#10060;  |
| [OIDC Auth Method](/consul/docs/secure/acl/auth-method/oidc)                                               |  &#10060; |  &#10060;  |  &#10060;  |
| [Redundancy Zones](/consul/docs/manage/scale/redundancy-zone)                                                        |  N/A      |  N/A       |  N/A       |
| [Sameness Groups](/consul/docs/reference/config-entry/sameness-group)                                         |  &#9989;  |  &#9989;   |  &#9989;   |
| [Server request rate limits per source IP](/consul/docs/manage/rate-limit/source)      |  &#9989;  |  &#9989;   |  &#9989;   |
| [Traffic rate limiting for services](/consul/docs/manage-traffic/rate-limit)                 |  &#9989;  |  &#9989;   |  &#9989;   |

</Tab>
</Tabs>